# easyautomation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  README_CN.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
demo/: Demo_Notepad.py  Demo_record.py  demo_record.py
src/easy_uiauto/: __init__.py  ctrl.py  draw.py  record.py  utils.py
test/: test1.py
tests/: test_smoke.py
